--- a/package.json
+++ b/package.json
@@ -4,8 +4,10 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "prepare": "husky install"
+    "test": "jest",
+    "prepare": "husky install",
+    "sass": "npx sass sass/styles.scss css/styles.css",
+    "sass-watch": "npx sass sass/styles.scss css/styles.css --watch"
   },
   "keywords": [],
   "author": "",
@@ -17,8 +19,9 @@
     "eslint-config-airbnb-base": "^15.0.0",
     "eslint-config-prettier": "^8.5.0",
     "eslint-plugin-import": "^2.26.0",
+    "husky": "^8.0.0",
     "jest": "^28.1.3",
-    "husky": "^8.0.0"
+    "sass": "^1.53.0"
   },
   "babel": {
     "env": {
